--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "date-fns": "^2.27.0",
+    "esbuild": "^0.9.7",
     "formik": "^2.2.9",
+    "html2canvas": "^1.3.3",
+    "jspdf": "^2.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
