--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "esbuild": "^0.9.7",
     "formik": "^2.2.9",
     "html2canvas": "^1.3.3",
+    "intro.js": "^4.3.0",
+    "intro.js-react": "^0.5.0",
     "jspdf": "^2.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
