--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zustand": "^3.4.1"
   },
   "devDependencies": {
+    "@types/intro.js": "^3.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.1",
